--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
 }
 
-.ap__skills-container {
+.app__skills-container {
     width: 80%;
     margin-top: 3rem;
     display: flex;
@@ -136,7 +136,7 @@
     }
 }
 
-.skills-tooltip {
-    max-width: 300px;
-    background-color: color;
-}
+// .skills-tooltip {
+//     max-width: 300px;
+//     background-color: color;
+// }
