--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -12,7 +12,7 @@
     z-index: 2;
 }
 
-.app_navbar-logo {
+.app__navbar-logo {
     display: flex;
     justify-content: flex-start;
     align-items: center;
