updated header with some info

--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -120,6 +120,11 @@
         margin: 1.75rem;
         width: 150px;
         height: 150px;
+
+        img {
+            width: 80%;
+            height: 80%;
+        }
     }
 
     div:nth-child(3) {
