--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -18,8 +18,9 @@
     align-items: center;
 
     img {
-        width: 90px;
-        height: 20px;
+        width: 150px;
+        height: 25px;
+        object-fit: contain;
 
         @media screen and (min-width: 2000px) {
             width: 180px;
