--- a/src/App.scss
+++ b/src/App.scss
@@ -123,6 +123,7 @@
         width: 15px;
         height: 15px;
         color: var(--gray-color);
+        margin-top: 5px;
       }
   
       &:hover {
