updated work description

--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -119,6 +119,8 @@
             font-weight: 400;
             color: var(--gray-color);
             margin-top: 5px;
+            flex-wrap: wrap;
+            width: 250px;
         }
     }
 }
